[API-540] Added fields-aligned class to ensure error fields lined up with others

--- a/assets/scss/base/_errors.scss
+++ b/assets/scss/base/_errors.scss
@@ -42,6 +42,10 @@
     width: 90%;
   }
 
+  &.fields-aligned {
+    margin-left: -22px;
+  }
+
   .error-notification {
     display: block;
     @include core-16;
